--- a/proyectom/prodesarrollo/static/myapp/css/inicio.css
+++ b/proyectom/prodesarrollo/static/myapp/css/inicio.css
@@ -49,3 +49,33 @@ cursor: pointer;
 .controls input[type="range"] {
   flex: 1;
 }
+
+
+#selectorRecorte {
+  position: absolute;
+  border: 2px dashed #fff;
+  background: rgba(255,255,255,0.1);
+  z-index: 10;
+}
+
+#selectorRecorte .handle {
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.handle.top-left { top: -7px; left: -7px; cursor: nwse-resize; }
+.handle.top-right { top: -7px; right: -7px; cursor: nesw-resize; }
+.handle.bottom-left { bottom: -7px; left: -7px; cursor: nesw-resize; }
+.handle.bottom-right { bottom: -7px; right: -7px; cursor: nwse-resize; }
+
+#imagenRecorte {
+  max-width: 100%;
+  max-height: 70vh;   /* ocupa el 70% de la pantalla en alto */
+  object-fit: contain; /* muestra la imagen completa */
+  display: block;
+  margin: auto;
+}
