Arreglos en el metodo de busqueda y perfil

--- a/proyectom/prodesarrollo/templates/paginas/inicio.html
+++ b/proyectom/prodesarrollo/templates/paginas/inicio.html
@@ -137,7 +137,7 @@
             <img src="{% static 'myapp/img/apariencia.png' %}" alt="historia" class="w-7 h-7 ml-[48%]">
             </a>
             <div class="border-t-4 border-b-2 border-neutral-700 mb-2 py-2">
-                <a href="#" class="flex items-center gap-2 px-4 py-4 rounded-md hover:bg-neutral-700">
+                <a href="{% url 'index' %}" class="flex items-center gap-2 px-4 py-4 rounded-md hover:bg-neutral-700">
                 Cambiar cuenta
                 <img src="{% static 'myapp/img/cambiar.png' %}" alt="anuncio" class="w-6 h-6 ml-[30%] rounded-full">
                 </a>
